# smToolS

./: .cache  .gitignore  .pre-commit-config.yaml  README.md  curvefitting.py  cutoffs.py  decorators.py  display.py  example.py  formulas.py  inout.py  kinetics.py  ml_pipeline.ipynb  pool.py  processing.py  pyproject.toml  requirements.txt  smTIRF.py  tests.py
ImageProcessing/: cutoffs.py  formulas.py  inout.py  kinetics.py  main_script.py  requirements.txt
MachineLearning/: generate_model.py
Processing/: curvefitting.py  cutoffs.py  decorators.py  display.py  formulas.py  inout.py  kinetics.py  main_script.py  smTIRF.py  smTOOLS.py  test.py
Public_ML_Prototype/: Traj_67pM-GRP1_ND08_01_preprocessed_data_01.xlsx  Traj_67pM-GRP1_ND08_01_preprocessed_data_02.xlsx  Traj_67pM-GRP1_ND08_03_preprocessed_data.xlsx  Traj_67pM-GRP1_ND08_04_preprocessed_data.xlsx  generate_model.py  ml_pipeline.ipynb
Visualization/: 3D_View.py  formulas.py  main_script.py  test.ipynb  tester.ipynb
sample_data/: Traj_67pM-GRP1_ND08_01.csv  Traj_67pM-GRP1_ND08_03.csv
simo_tools/: __init__.py  generic_funcs.py  metadata.py  movie.py  trajectory.py
simo_tools/analysis/: curvefitting.py  cutoffs.py  display.py  formulas.py  kinetics.py
simo_tools/constants/: __init__.py  enums.py  strings.py
simo_tools/handlers/: analyzing.py  data.py  file_data.py  importing.py  visualizing.py
simo_tools/scripts/: analyze.py  visualize.py
smToolS/: metadata.py
smToolS/analysis_tools/: curvefitting.py  cutoffs.py  display.py  formulas.py  kinetics.py
tests/: conftest.py
(+21 files in other folders)
