[project]
name = "simo_tools"
requires-python = "~=3.11"
version="0.0.1"
dependencies = [
    "pandas>=2.1",
]

[project.optional-dependencies]
dev = [
    "black==23.11.0",
    "GitPython==3.1.37",
    "nox==2023.4.22",
    "pre-commit==3.5.0",
    "pytest==7.4.3",
]

[tool.setuptools.packages]
find = {include = ["simo_tools*"]}

[tool.ruff]
select = ["A", "C", "E", "F", "I"]
ignore = ["A001", "A003", "F403"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "C", "E", "F", "I"]
unfixable = []  # fix all

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}  # ignore no specific files and checks
line-length = 88


# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py311"

[tool.ruff.mccabe]
max-complexity = 10

[tool.black]
line-length = 88
target-version = ["py311"]
preview=true

[tool.docformatter]
blank=true
close-quotes-on-newline=true
in-place=true
make-summary-multi-line=true
pre-summary-newline=true
recursive=true
wrap-descriptions=68
wrap-summaries=88
